# praat_modification

./: .gitignore  FilledPauses.praat  FluencyProsody Revised 230613.docx  FluencyProsody.py  FluencyProsodyMasterData.xlsx  Intentisy Average.praat  IntentisyPitchAverageTiersAdd.praat  Pitch Average.praat  Praat copy.drawio.bak  Sample Data Japanese.xlsx  batchrate.praat  nouhin20230423.txt  pyproject.toml  toexcel.py  要件.txt
success/: 000000230829 Sample_Japanese.TextGrid  205032220516_auto error.TextGrid  205417230709_auto.TextGrid
tgfiles(batchrate後)/: 205417230709_auto.TextGrid
tgfiles_past/: 000000230829 Sample_Japanese.TextGrid  205014220427_auto error.TextGrid  205387230507_auto error.TextGrid  205401230528_auto error.TextGrid
word2txtanalyze_backedup_20230423/: word2txt2analyze.py
word2txtanalyze_backedup_20230423/WordFiles/: 202001200805.docx  202054201204.docx
word2txtanalyze_modified_20230423/: LexcialSyntactic.py
word2txtanalyze_modified_20230423/WordFiles/: 202084210223.docx
