[tool.poetry]
name = "praat-modification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "praat_modification"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
praatio = "^6.0.0"
openpyxl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
